chapter-05/external-service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: 2ip.ru
  ports:
    - port: 80
