chapter-05/kubia-svc-sesion-affinity.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-session-affinity
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
