chapter-05/multiport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: multiport-echo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: echo-server
