chapter-05/kubia-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
    - hosts:
        - lknrmn1c.mylabserver.com
      secretName: tls-secret
  rules:
    - host: lknrmn1c.mylabserver.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubia-nodeport
              servicePort: 80
